--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>拂晓律的个人主页</title>
+  </head>
+  <body>Hello world</body>
+</html>
