--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset = "utf-8">
     <title>拂晓律的个人主页</title>
+    <sytle type = "text/css">
+      div {
+        width: 500px;
+        height: 300px;
+        margin: auto;
+      }
+    </sytle>
   </head>
-  <body>Hello world</body>
+  <body>
+    <div>
+      hello
+    </div>
+  </body>
 </html>
