--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset = "utf-8">
     <title>拂晓律的个人主页</title>
-    <sytle type = "text/css">
-      div {
-        width: 500px;
-        height: 300px;
-        margin: auto;
-      }
-    </sytle>
+    <link rel = "stylesheet" type = "text/css" href = "my.css"/>
   </head>
   <body>
     <div>
