--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset = "utf-8">
-    <title>拂晓律的个人主页</title>
+    <title>払暁のzone</title>
     <link rel = "stylesheet" type = "text/css" href = "my.css"/>
   </head>
   <body>
-    <div>
-      hello
+    <div id = "title">
+      <h1>払暁のzone</h1>
     </div>
   </body>
 </html>
