--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <div id = "title">
-      <h1>払暁のzone</h1>
+      <div id = "title_center">
+        <h1>払暁のzone</h1>
+        <form action = "https://cn.bing.com/search" method = "get">
+          <input type = "text" id = "lineEdit" name = "q"/><br/>
+          <input type = "submit" id = "search" value = ""/>
+        </form>
+      </div>
     </div>
   </body>
 </html>
