--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </form>
       </div>
     </div>
-    <div id = "fristImage">
+    <div id = "imgdiv">
       <p>呐～</p>
-      <img src = "tanabata.jpg"/>
+      <img src = "tanabata.jpg" id = "img" />
     </div>
   </body>
 </html>
