--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset = "utf-8">
     <title>払暁のzone</title>
-    <link rel = "stylesheet" type = "text/css" href = "my.css"/>
-    <script src="my.js"></script>
+    <link rel = "stylesheet" type = "text/css" href = "index.css"/>
+    <script src="index.js"></script>
   </head>
   <body onload = "bodyOnload()">
     <div id = "title" class = "titleDark">
@@ -19,10 +19,6 @@
           <input type = "submit" id = "btn" class = "search" value = ""/>
         </form>
       </div>
-    </div>
-    <div id = "imgdiv">
-      <p>呐～</p>
-      <img src = "tanabata.jpg" id = "img" />
     </div>
   </body>
 </html>
