--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset = "utf-8">
-    <title>払暁のzone</title>
-    <link rel = "stylesheet" type = "text/css" href = "index.css"/>
-    <script src="index.js"></script>
-  </head>
-  <body onload = "bodyOnload()">
-    <div id = "title" class = "titleDark">
-      <select id = "theme" class = "selDark" onchange = "selectChanged()">
-        <option>暗黑</option>
-        <option>明亮</option>
-      </select>
-      <div id = "title_center">
-        <h1>払暁のzone</h1>
-        <form action = "https://cn.bing.com/search" method = "get">
-          <input type = "text" id = "lineEdit" name = "q" onmouseover = "searchEnter()" onmouseout = "searchLeave()"/><br/>
-          <input type = "submit" id = "btn" class = "search" value = ""/>
-        </form>
-      </div>
-    </div>
-  </body>
+<html lang="zh-CN">
+    <head>
+        <meta charset="UTF-8" />
+        <title></title>
+        <link rel="stylesheet" href="index.css" />
+    </head>
+    <body>
+        <div class="card">
+            <!--正面卡片-->
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+        </div>
+    </body>
 </html>
