--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
             <div class="back">
             </div>
         </div>
+	<div class="pic">
+	    <div class="cource">
+	    </div>
+	    <div class="target">
+	    </div>
+	</div>
     </body>
 </html>
