--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
+        <div class="test">
+            <div class="t1"></div>
+            <div class="t2"></div>
+        </div>
         <div class="card">
             <!--正面卡片-->
-            <div class="front">
+            <div class="front">A</div>
+            <div class="back">B</div>
+        </div>
+        <div class="pic">
+            <div class="cource">
             </div>
-            <div class="back">
+            <div class="target">
             </div>
         </div>
-	<div class="pic">
-	    <div class="cource">
-	    </div>
-	    <div class="target">
-	    </div>
-	</div>
     </body>
 </html>
