--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         </div>
         <div class="card">
             <!--正面卡片-->
-            <div class="card_front">A</div>
-            <div class="card_back">B</div>
+            <div class="card_front"></div>
+            <div class="card_back"></div>
         </div>
         <div class="pic">
             <div class="cource">
