--- a/index.html
+++ b/index.html
@@ -6,20 +6,6 @@
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-        <div class="test">
-            <div class="t1"></div>
-            <div class="t2"></div>
-        </div>
-        <div class="card">
-            <!--正面卡片-->
-            <div class="card_front"></div>
-            <div class="card_back"></div>
-        </div>
-        <div class="pic">
-            <div class="cource">
-            </div>
-            <div class="target">
-            </div>
-        </div>
+	<div></div>
     </body>
 </html>
