--- a/nichijou.html
+++ b/nichijou.html
@@ -12,7 +12,9 @@
         </nav>
         <hr/>
         <article>
-            <img src=''/>
+            <p class='title'>2023-05-06 土曜日</p>
+            <p>简简单单几个代码，个人网页完成~</p>
+            <img src='./image/20230506/0.png'/>
         </article>
     </body>
 </html>
