--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset='UTF-8'/>
         <link rel='stylesheet' href='style.css'/>
+        <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+        <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
         <script src='fun.js' charset='UTF-8'></script>
     </head>
     <body>
@@ -14,5 +16,6 @@
         <article>
             <img src=''/>
         </article>
+        <div id="gitalk-container"></div>
     </body>
 </html>
