--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang='zh-CN'>
     <head>
         <meta charset='UTF-8'/>
-        <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-        <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+        <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
         <link rel='stylesheet' href='style.css'/>
         <script src='fun.js' charset='UTF-8'></script>
     </head>
