--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
         <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
         <link rel='stylesheet' href='style.css'/>
-        <script src='fun.js' charset='UTF-8'></script>
     </head>
     <body>
         <nav align='right'>
@@ -15,7 +14,8 @@
         <hr/>
         <article>
             <img src=''/>
+            <div id='gitalk-container'></div>
         </article>
-        <div id="gitalk-container"></div>
     </body>
+    <script src='fun.js' charset='UTF-8'></script>
 </html>
