--- a/nichijou.html
+++ b/nichijou.html
@@ -8,6 +8,7 @@
         <nav align='right'>
             <a href='index.html'>主页</a>
             <a href='nichijou.html'>日常</a>
+            <a href='git.html'>Git</a>
         </nav>
         <hr/>
         <article>
