--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang='zh-CN'>
     <head>
         <meta charset='UTF-8'/>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
-        <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+        <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">-->
+        <!--<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>-->
         <link rel='stylesheet' href='style.css'/>
     </head>
     <body>
         <nav align='right'>
             <a href='index.html'>主页</a>
             <a href='nichijou.html'>日常</a>
+            <a href='git.html'>Git</a>
         </nav>
         <hr/>
         <article>
-            <img src=''/>
-            <div id='gitalk-container'></div>
+            <!--<div id='gitalk-container'></div>-->
         </article>
     </body>
-    <script src='fun.js' charset='UTF-8'></script>
+    <!--<script src='gitalk.js' charset='UTF-8'></script>-->
 </html>
