--- a/git.html
+++ b/git.html
@@ -346,7 +346,7 @@ git log
 
 commit 4c5a064db656d24e128107419827cc34ee5fe046 (HEAD -> dpp)
 Merge: 73ece52 a3da733
-Author: 宪超 袁 &lt;yuanxianchaoxc@163.com&gt;
+Author: 张三 &lt;zhangsan@163.com&gt;
 Date:   Thu Oct 27 07:04:58 2022 +0000
 
     Merge branch 'turbo' into 'dev'
@@ -812,5 +812,5 @@ gitlab_workhorse['auth_backend'] = "http://localhost:8888"
 gitlab-ctl reconfigure</pre>
         </article>
     </body>
-    <script src="gitalk.js" charset="UTF-8"></script>
+    <script src="shell.js" charset="UTF-8"></script>
 </html>
