--- a/nichijou.html
+++ b/nichijou.html
@@ -15,6 +15,8 @@
             <p class='title'>2023-05-06 土曜日</p>
             <p>简简单单几个代码，个人网页完成~</p>
             <img src='./image/20230506/0.png'/>
+            <p class='title'>2023-05-08 月曜日</p>
+            <p>大致写了下Git笔记，加了点语法高亮，效果算出来了点~</p>
         </article>
     </body>
 </html>
