--- a/nichijou.html
+++ b/nichijou.html
@@ -17,6 +17,8 @@
             <img src='./image/20230506/0.png'/>
             <p class='title'>2023-05-08 月曜日</p>
             <p>大致写了下Git笔记，加了点语法高亮，效果算出来了点~</p>
+            <p class='title'>2023-05-15 月曜日</p>
+            <p>昨晚2点肚子痛的蹲了20分钟的坑……</p>
         </article>
     </body>
 </html>
