--- a/nichijou.html
+++ b/nichijou.html
@@ -19,6 +19,10 @@
             <p>大致写了下Git笔记，加了点语法高亮，效果算出来了点~</p>
             <p class='title'>2023-05-15 月曜日</p>
             <p>昨晚2点肚子痛的蹲了20分钟的坑……</p>
+            <p class='title'>2023-05-19 金曜日</p>
+            <img src='./image/20230520/20230520091841.jpg'/>
+            <p class='title'>2023-05-20 土曜日</p>
+            <p>昨晚又想念父亲了哩~</p>
         </article>
     </body>
 </html>
