--- a/nichijou.html
+++ b/nichijou.html
@@ -21,8 +21,10 @@
             <p>昨晚2点肚子痛的蹲了20分钟的坑……</p>
             <p class='title'>2023-05-19 金曜日</p>
             <img src='./image/20230520/20230520091841.jpg'/>
-            <p class='title'>2023-05-20 土曜日</p>
+            <p class='title'>2023-05-20 土曜日 午前</p>
             <p>昨晚又想念父亲了哩~</p>
+            <p class='title'>2023-05-20 土曜日 午後</p>
+            <p>复阳了……</p>
         </article>
     </body>
 </html>
