--- a/nichijou.html
+++ b/nichijou.html
@@ -25,6 +25,8 @@
             <p>昨晚又想念父亲了哩~</p>
             <p class='title'>2023-05-20 土曜日 午後</p>
             <p>复阳了……</p>
+            <p class='title'>2023-05-21 日曜日 午前</p>
+            <p>已经转阴了……吧</p>
         </article>
     </body>
 </html>
