--- a/nichijou.html
+++ b/nichijou.html
@@ -27,6 +27,8 @@
             <p>复阳了……</p>
             <p class='title'>2023-05-21 日曜日 午前</p>
             <p>已经转阴了……吧</p>
+            <p class='title'>2023-05-30 月曜日 午前</p>
+            <p>昨晚做了一夜的梦，早上困的实在不想起床</p>
         </article>
     </body>
 </html>
