--- a/nichijou.html
+++ b/nichijou.html
@@ -29,6 +29,9 @@
             <p>已经转阴了……吧</p>
             <p class='title'>2023-05-30 月曜日 午前</p>
             <p>昨晚做了一夜的梦，早上困的实在不想起床</p>
+	    <p class='title'>2023-06-06 火曜日 午後</p>　
+            <p>数学真的太重要了!</p>
+            <img src='./image/20230606/20230606150230.png'/>
         </article>
     </body>
 </html>
