--- a/git.html
+++ b/git.html
@@ -203,6 +203,12 @@ git clone ~/Documents/QtCode</pre>
             <li>克隆一个远程 Git 仓库</li>
             <pre class="shell">
 git clone 仓库地址</pre>
+			<li>克隆带submodule的仓库</li>
+			<pre class="shell">
+git clone 仓库地址
+cd 仓库
+git submodule init
+git submodule update</pre>
         </ul>
         <p class="title">关联</p>
         <pre class="shell">
