--- a/index.html
+++ b/index.html
@@ -14,7 +14,43 @@
         </nav>
         <hr/>
         <article>
-            <!--<div id='gitalk-container'></div>-->
+            <p>梦毕深更凝思绪，遥问破晓终几时</p>
+        </article>
+        <article>
+            <p>
+                送友至驿站，流连终需散。<br/>
+                孤影渐逐远，惜别望复见。
+            </p>
+        </article>
+        <article>
+            <p>
+                窗外凋淅雨，丝丝渐入微。<br/>
+                琴闭书合际，故人敲心扉。<br/>
+                时光焉能逆？往事不可追。<br/>
+                赤条无牵挂，徒言盼梦归。
+            </p>
+        </article>
+        <article>
+            <p>
+                念故人观如今<br/>
+                前景已无望，回首泪满裳。<br/>
+                故人皆离去，留我独彷徨。<br/>
+                肆欲纵享乐，哪管路坎坷。<br/>
+                只期今朝醉，明日任蹉跎。
+            </p>
+        </article>
+        <article>
+            <p>
+                睡前别玩手机<br/>
+                忆往昔，看如今，人生如梦似幻影。<br/>
+                既辗转，亦轻叹，往日渐远难入眠。
+            </p>
+        </article>
+        <article>
+            <p>
+                梦境之中遇故人，对坐相视心绕萦。<br/>
+                静候逐问皆有因，言毕梦醒了无痕。
+            </p>
         </article>
     </body>
     <!--<script src='gitalk.js' charset='UTF-8'></script>-->
